[package]
name = "nannou_gen_art"
version = "0.1.0"
authors = ["Joshua Lowe <lowejosh50@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"

[[example]]
name = "sin_dots"
path = "src/playground/sin_dots.rs"